--- a/.github/workflows/deliver-container-image.yml
+++ b/.github/workflows/deliver-container-image.yml
@@ -31,11 +31,18 @@ jobs:
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v3.1.1  # Or latest release
-        with:
-          cosign-release: 'v1.13.1'
+      #- name: Install cosign
+        #if: github.event_name != 'pull_request'
+        #uses: sigstore/cosign-installer@v3.1.1  # Or latest release
+        #with:
+          #cosign-release: 'v1.13.1'
+
+      - name: Manually install cosign
+        run: |
+          COSIGN_VERSION="v1.13.1"
+          curl -L -o cosign https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-linux-amd64
+          chmod +x cosign
+          sudo mv cosign /usr/local/bin/cosign
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
