--- a/.github/workflows/deliver-container-image.yml
+++ b/.github/workflows/deliver-container-image.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Manually install cosign
         run: |
-          COSIGN_VERSION="v1.13.1"
+          COSIGN_VERSION="v2.2.4"  # or latest stable
           curl -L -o cosign https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-linux-amd64
           chmod +x cosign
           sudo mv cosign /usr/local/bin/cosign
