--- a/.github/workflows/deploy-aws-app-runner.yml
+++ b/.github/workflows/deploy-aws-app-runner.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Install AWS CLI
         run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+          # sudo apt-get update
+          # sudo apt-get install -y awscli
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
